--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-22 21:56+0800\n"
+"POT-Creation-Date: 2017-11-30 15:17+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.5.0\n"
 
 #: ../../api/HinetPy.client.rst:2
 msgid "HinetPy.client module"
@@ -169,10 +169,11 @@ msgid "Returns"
 msgstr ""
 
 #: HinetPy.client.Client.get_waveform:24 of
-msgid ""
-"* **data** (*str*) -- Filename of downloaded win32 data. * **ctable** "
-"(*str*) -- Filename of downloaded win32 data."
-msgstr ""
+msgid "* **data** (*str*) -- Filename of downloaded win32 data. *"
+msgstr "* **data** (*str*) -- 下载得到的win32数据的文件名。 *"
+
+msgid "**ctable** (*str*) -- Filename of downloaded channel table file."
+msgstr "**ctable** (*str*) -- 下载的通道表文件的文件名。"
 
 #: HinetPy.client.Client.get_waveform:24 of
 msgid "**data** (*str*) -- Filename of downloaded win32 data."
@@ -352,12 +353,12 @@ msgstr "检查 ``catwin32`` 和 ``win2sac_32`` 是否在PATH中。"
 #, fuzzy
 msgid ""
 "The client will report errors if ``catwin32`` and/or ``win2sac_32`` are "
-"NOT in PATH. In this case, please download win32tools from "
-"`Hi-net <http://www.hinet.bosai.go.jp/>`_ and make sure both binary files are in "
+"NOT in PATH. In this case, please download win32tools from `Hi-net "
+"<http://www.hinet.bosai.go.jp/>`_ and make sure both binary files are in "
 "your PATH."
 msgstr ""
-"若 ``catwin32`` 和/或 ``win2sac_32`` 不在PATH中则会报错。这种情况下请从 "
-"`Hi-net <http://www.hinet.bosai.go.jp/>`_ 下载win32tools并确保两个二进制文件都在PATH中。"
+"若 ``catwin32`` 和/或 ``win2sac_32`` 不在PATH中则会报错。这种情况下请从 `Hi-net "
+"<http://www.hinet.bosai.go.jp/>`_ 下载win32tools并确保两个二进制文件都在PATH中。"
 
 #: HinetPy.client.Client.info:1 of
 msgid "List information of networks."
