--- a/docs/locale/zh_CN/LC_MESSAGES/tutorial/conversion.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/tutorial/conversion.po
@@ -8,27 +8,28 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-22 12:20+0800\n"
+"POT-Creation-Date: 2018-10-03 23:46-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../tutorial/conversion.rst:2
 msgid "Data conversion"
 msgstr "数据转换"
 
 #: ../../tutorial/conversion.rst:4
+#, fuzzy
 msgid ""
 "Hi-net provide waveform data in win32 format and instrument response in "
-"channel table. :mod:`~HinetPy.win32` can convert them into SAC and SACPZ "
-"format."
+"channel table. :mod:`~HinetPy.win32` can convert them into SAC and SAC "
+"polezero formats."
 msgstr ""
-"Hi-net提供了win32格式的波形数据和通道表形式的仪器响应。"
-" :mod:`~HinetPy.win32` 可以将其转换为SAC和SAC零极点格式。"
+"Hi-net提供了win32格式的波形数据和通道表形式的仪器响应。 :mod:`~HinetPy.win32` "
+"可以将其转换为SAC和SAC零极点格式。"
 
 #: ../../tutorial/conversion.rst:12
 msgid "Extract Waveform Data"
@@ -44,8 +45,8 @@ msgid ""
 "``N.NABC.U.SAC``). You can specify another SAC suffix and a different "
 "output directory."
 msgstr ""
-"SAC文件的默认文件名格式为 ``STATION.COMPONENT.SAC`` （例如 ``N.NABC.U.SAC`` ）。"
-"你可以指定其他SAC文件后缀和输出目录。"
+"SAC文件的默认文件名格式为 ``STATION.COMPONENT.SAC`` （例如 ``N.NABC.U.SAC`` "
+"）。你可以指定其他SAC文件后缀和输出目录。"
 
 #: ../../tutorial/conversion.rst:23 ../../tutorial/conversion.rst:55
 msgid ""
@@ -54,9 +55,8 @@ msgid ""
 "filter the channels. They accept a list of string or a string contains "
 "wildcard."
 msgstr ""
-"如果你只想提取一部分通道的波形数据，你可以使用"
-" ``filter_by_id`` 、 ``filter_by_name`` 和/或 ``filter_by_component`` "
-"以筛选需要的通道。这些参数都可以接受字符串列表或者包含通配符的字符串。"
+"如果你只想提取一部分通道的波形数据，你可以使用 ``filter_by_id`` 、 ``filter_by_name`` 和/或 "
+"``filter_by_component`` 以筛选需要的通道。这些参数都可以接受字符串列表或者包含通配符的字符串。"
 
 #: ../../tutorial/conversion.rst:35
 msgid "Extract PZ"
@@ -76,8 +76,8 @@ msgid ""
 " PZ format. Its usage is very similar to "
 ":meth:`~HinetPy.win32.extract_sac`."
 msgstr ""
-":meth:`~HinetPy.win32.extract_pz` 可以将Hi-net通道表仪器响应转换为SAC零极点格式。"
-"其用法类似域 :meth:`~HinetPy.win32.extract_sac` 。"
+":meth:`~HinetPy.win32.extract_pz` 可以将Hi-net通道表仪器响应转换为SAC零极点格式。其用法类似域 "
+":meth:`~HinetPy.win32.extract_sac` 。"
 
 #: ../../tutorial/conversion.rst:46
 msgid "Extract information of all channels as SACPZ file:"
@@ -89,8 +89,8 @@ msgid ""
 "``N.NABC.U.SAC_PZ``). You can specify another SACPZ suffix and a "
 "different output directory."
 msgstr ""
-"SACPZ文件的默认文件名格式为 ``STATION.COMPONENT.SAC_PZ`` （例如 ``N.NABC.U.SAC_PZ`` ）。"
-"你可以指定其他SACPZ文件后缀和输出目录。"
+"SACPZ文件的默认文件名格式为 ``STATION.COMPONENT.SAC_PZ`` （例如 ``N.NABC.U.SAC_PZ`` "
+"）。你可以指定其他SACPZ文件后缀和输出目录。"
 
 #: ../../tutorial/conversion.rst:68
 msgid ""
