--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-07 14:08+0800\n"
+"POT-Creation-Date: 2018-10-03 23:46-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../api/HinetPy.client.rst:2
 msgid "HinetPy.client module"
