--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-04 13:11-0400\n"
+"POT-Creation-Date: 2018-11-21 16:38-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -52,37 +52,38 @@ msgstr "请求失败时重新尝试多少次。"
 msgid "See notes below."
 msgstr "见下面的注解。"
 
-#: HinetPy.client.Client:16 HinetPy.client.Client.get_arrivaltime:15
-#: HinetPy.client.Client.get_focalmechanism:15
-#: HinetPy.client.Client.get_waveform:29 HinetPy.client.Client.info:6
-#: HinetPy.client.Client.login:8 HinetPy.client.Client.select_stations:35 of
-msgid "Examples"
-msgstr "示例"
-
-#: HinetPy.client.Client:21 HinetPy.client.Client.get_waveform:53 of
+#: HinetPy.client.Client:16 HinetPy.client.Client.get_waveform:29 of
 msgid "Notes"
 msgstr "注解"
 
-#: HinetPy.client.Client:23 of
+#: HinetPy.client.Client:18 of
 msgid ""
 "Hi-net server ususally spends 10 seconds to 1 minute on data preparation "
 "after receiving a data request. During the data preparation, users are "
-"**NOT** allowed to request another data. So users have to wait until the "
-"data is ready."
+"**NOT** allowed to post another data request. So users have to wait until"
+" the data is ready."
 msgstr "Hi-net服务器在接收到数据请求后通常需要花10秒到1分钟时间来准备数据。在数据准备期间，禁止用户再次请求数据。因而用户必须等待直到数据准备完成。"
 
-#: HinetPy.client.Client:28 of
+#: HinetPy.client.Client:23 of
 msgid ""
 "HinetPy checks data status every ``sleep_time_in_seconds`` seconds until "
 "the data is ready. If HinetPy checks the data status for more than "
-"``max_sleep_count`` times, it possibly indicates something wrong happend "
-"with this data. Then, HinetPy will retry to request this data ``retries``"
-" times. Ususally, you don't need to modify these settings unless you know"
-" what you're doing."
+"``max_sleep_count * sleep_time_in_seconds`` seconds, it possibly "
+"indicates something wrong happend with this data request. Then, HinetPy "
+"will retry to request this data ``retries`` times. Ususally, you don't "
+"need to modify these settings unless you know what you're doing."
 msgstr ""
 "HinetPy每隔 ``sleep_time_in_seconds`` 秒检查一次数据状态直到数据准备完成。如果HinetPy检查数据状态 "
-"``max_sleep_count`` 次而数据还未准备号，这可能意味着此次数据申请出错了。然后，HinetPy会重新尝试申请这个数据 "
-"``retries`` 次。通常，你不需要修改这些设置，除非你知道自己在做什么。"
+"``max_sleep_count * sleep_time_in_seconds`` "
+"秒而数据还未准备好，这可能意味着此次数据申请出错了。然后，HinetPy会重新尝试申请这个数据 ``retries`` "
+"次。通常，你不需要修改这些设置，除非你知道自己在做什么。"
+
+#: HinetPy.client.Client:31 HinetPy.client.Client.get_arrivaltime:15
+#: HinetPy.client.Client.get_focalmechanism:15
+#: HinetPy.client.Client.get_waveform:58 HinetPy.client.Client.info:6
+#: HinetPy.client.Client.login:8 HinetPy.client.Client.select_stations:35 of
+msgid "Examples"
+msgstr "示例"
 
 #: HinetPy.client.Client.login:1 of
 msgid "Login in Hi-net server."
@@ -172,6 +173,13 @@ msgid "Returns"
 msgstr ""
 
 #: HinetPy.client.Client.get_waveform:26 of
+#, fuzzy
+msgid ""
+"* **data** (*str*) -- Filename of downloaded win32 data. * **ctable** "
+"(*str*) -- Filename of downloaded channel table file."
+msgstr "**ctable** (*str*) -- 下载的通道表文件的文件名。"
+
+#: HinetPy.client.Client.get_waveform:26 of
 msgid "**data** (*str*) -- Filename of downloaded win32 data."
 msgstr "**data** (*str*) -- 下载得到的win32数据的文件名。"
 
@@ -180,86 +188,86 @@ msgid "**ctable** (*str*) -- Filename of downloaded channel table file."
 msgstr "**ctable** (*str*) -- 下载的通道表文件的文件名。"
 
 #: HinetPy.client.Client.get_waveform:31 of
-msgid "Request 6 minutes data since 2010-01-01T05:35 (GMT+0900) from Hi-net."
-msgstr "从Hi-net请求2010-01-01T05:35 (GMT+0900)开始的6分钟数据。"
-
-#: HinetPy.client.Client.get_waveform:36 of
-msgid "Several other string formats of ``starttime`` are also supported:"
-msgstr "``starttime`` 也支持其他常见的格式："
-
-#: HinetPy.client.Client.get_waveform:41 of
-msgid "``starttime`` can be given as :py:class:`datetime.datetime`:"
-msgstr "``starttime`` 也可以用 :py:class:`datetime.datetime` 指定："
-
-#: HinetPy.client.Client.get_waveform:48 of
-msgid "Request full-day data of 2010-01-01T00:00 (GMT+0900) of F-net:"
-msgstr "从F-net申请2010-01-01T00:00 (GMT+0900)全天的数据："
-
-#: HinetPy.client.Client.get_waveform:55 of
 msgid "**TimeZone**"
 msgstr "**时区**"
 
-#: HinetPy.client.Client.get_waveform:57 of
+#: HinetPy.client.Client.get_waveform:33 of
 msgid "All times in HinetPy are in JST (GMT+0900)."
 msgstr "HinetPy中的所有时间都是日本标准时间（GMT+0900）。"
 
-#: HinetPy.client.Client.get_waveform:59 of
+#: HinetPy.client.Client.get_waveform:35 of
 msgid "**max_span**"
 msgstr ""
 
-#: HinetPy.client.Client.get_waveform:61 of
-msgid "Hi-net set three limitations of each data request:"
+#: HinetPy.client.Client.get_waveform:37 of
+msgid "Hi-net server sets three limitations of each data request:"
 msgstr "Hi-net对每次数据请求设置了3个限制："
 
-#: HinetPy.client.Client.get_waveform:63 of
+#: HinetPy.client.Client.get_waveform:39 of
 msgid "Record_Length <= 60 min"
 msgstr "数据长度不大于60分钟"
 
-#: HinetPy.client.Client.get_waveform:64 of
+#: HinetPy.client.Client.get_waveform:40 of
 msgid "Number_of_channels * Record_Length <= 12000 min"
 msgstr "通道数*数据长度不得大于12000分钟"
 
-#: HinetPy.client.Client.get_waveform:65 of
+#: HinetPy.client.Client.get_waveform:41 of
 msgid "Only the latest 150 requested data are kept"
 msgstr "仅保留最近150次请求的数据"
 
-#: HinetPy.client.Client.get_waveform:67 of
+#: HinetPy.client.Client.get_waveform:43 of
 msgid ""
 "For example, Hi-net network has about 24000 channels. Acoording to "
 "limitation 2, the record length should be no more than 5 minutes in each "
-"data request. HinetPy \"break\" the limitation by splitting a long data "
-"request into several short sub-requsts."
+"data request. HinetPy \"break through\" the limitation by splitting a "
+"long-duration data request into several short-duration sub-requsts."
 msgstr ""
 "例如，Hi-"
 "net台网有大约24000个通道。根据第2条限制，单次请求的通道长度不得大于5分钟。HinetPy通过将一个长的数据请求分割成多个短的子请求来打破这一限制。"
 
-#: HinetPy.client.Client.get_waveform:72 of
+#: HinetPy.client.Client.get_waveform:49 of
 msgid "**Workflow**"
 msgstr "**工作流程**"
 
-#: HinetPy.client.Client.get_waveform:74 of
+#: HinetPy.client.Client.get_waveform:51 of
 msgid "do several checks"
 msgstr "做一些检查"
 
-#: HinetPy.client.Client.get_waveform:75 of
-msgid "split a long request into several short sub-requests"
+#: HinetPy.client.Client.get_waveform:52 of
+msgid "split a long-duration request into several short-duration sub-requests"
 msgstr "将长数据请求分割成多个短的数据子请求"
 
-#: HinetPy.client.Client.get_waveform:76 of
+#: HinetPy.client.Client.get_waveform:53 of
 msgid "loop over all sub-requests and return data id to download"
 msgstr "对所有子请求进行循环并返回要下载的数据ID"
 
-#: HinetPy.client.Client.get_waveform:77 of
+#: HinetPy.client.Client.get_waveform:54 of
 msgid "download all data based on data id"
 msgstr "基于数据ID下载所有数据"
 
-#: HinetPy.client.Client.get_waveform:78 of
+#: HinetPy.client.Client.get_waveform:55 of
 msgid "extract all zip files and merge into one win32 format data"
 msgstr "解压下载得到的所有ZIP文件并合并到一个win32格式的文件"
 
-#: HinetPy.client.Client.get_waveform:79 of
+#: HinetPy.client.Client.get_waveform:56 of
 msgid "cleanup"
 msgstr "清理工作"
+
+#: HinetPy.client.Client.get_waveform:60 of
+msgid "Request 6 minutes data since 2010-01-01T05:35 (GMT+0900) from Hi-net."
+msgstr "从Hi-net请求2010-01-01T05:35 (GMT+0900)开始的6分钟数据。"
+
+#: HinetPy.client.Client.get_waveform:65 of
+msgid "Several other string formats of ``starttime`` are also supported:"
+msgstr "``starttime`` 也支持其他常见的格式："
+
+#: HinetPy.client.Client.get_waveform:70 of
+msgid "``starttime`` can be given as :py:class:`datetime.datetime`:"
+msgstr "``starttime`` 也可以用 :py:class:`datetime.datetime` 指定："
+
+#: HinetPy.client.Client.get_waveform:77 of
+msgid "Request full-day data of 2010-01-01T00:00 (GMT+0900) of F-net:"
+msgstr "从F-net申请2010-01-01T00:00 (GMT+0900)全天的数据："
 
 #: HinetPy.client.Client.get_arrivaltime:1 of
 msgid "Get JMA arrival time data from Hi-net."
@@ -355,27 +363,27 @@ msgstr "要选择的台站。"
 
 #: HinetPy.client.Client.select_stations:14 of
 msgid "Limit to stations with a latitude larger than the specified minimum."
-msgstr ""
+msgstr "限制台站纬度大于指定值。"
 
 #: HinetPy.client.Client.select_stations:16 of
 msgid "Limit to stations with a latitude smaller than the specified maximum."
-msgstr ""
+msgstr "限制台站纬度小于指定值。"
 
 #: HinetPy.client.Client.select_stations:18 of
 msgid "Limit to stations with a longtitude larger than the specified minimum."
-msgstr ""
+msgstr "限制台站经度大于指定值。"
 
 #: HinetPy.client.Client.select_stations:20 of
 msgid "Limit to stations with a longtitude smaller than the specified maximum."
-msgstr ""
+msgstr "限制台站经度小于指定值。"
 
 #: HinetPy.client.Client.select_stations:22 of
 msgid "Specify the latitude to be used for a radius search."
-msgstr ""
+msgstr "指定用于半径搜索的纬度。"
 
 #: HinetPy.client.Client.select_stations:24 of
 msgid "Specify the longitude to be used for a radius search."
-msgstr ""
+msgstr "指定用于半径搜索的经度。"
 
 #: HinetPy.client.Client.select_stations:26 of
 msgid ""
@@ -430,17 +438,4 @@ msgstr ""
 #: HinetPy.client.Client.info:1 of
 msgid "List information of networks."
 msgstr "列出台网信息。"
-
-#~ msgid "Limit to stations with a latitude smaller than the specified minimum."
-#~ msgstr ""
-
-#~ msgid "Limit to stations with a longtitude smaller than the specified minimum."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Limit to stations within the specified"
-#~ " maxradius number of degrees from the"
-#~ " geographic point defined by the "
-#~ "latitude and longitude parameters."
-#~ msgstr ""
 
