--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.header.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.header.po
@@ -3,19 +3,18 @@
 # This file is distributed under the same license as the HinetPy package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-22 12:20+0800\n"
+"POT-Creation-Date: 2018-11-21 16:01-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../api/HinetPy.header.rst:2
 msgid "HinetPy.header module"
@@ -34,17 +33,17 @@ msgid "Number of channels the network has."
 msgstr "此台网的通道数目。"
 
 #: HinetPy.header.Network:13 of
-msgid "Start time (in JST time) when waveform data is avaiable."
+msgid "Start time (JST: UTC+0900) when waveform data is avaiable."
 msgstr "可申请的波形数据的开始时间（日本标准时间）。"
 
 #: HinetPy.header.Network:17 of
-msgid "Network homepage."
+msgid "Homepage of the network."
 msgstr "台网主页。"
 
 #: HinetPy.header.Network:19 of
 msgid ""
 "``NETWORK`` is a dict of :class:`~HinetPy.header.Network`, containing "
 "information of all networks available from Hi-net website."
-msgstr "``NETWORK`` 是一个 :class:`~HinetPy.header.Network` 词典，包含了"
-"Hi-net网站上所有可用的台网的信息。"
-
+msgstr ""
+"``NETWORK`` 是一个 :class:`~HinetPy.header.Network` 词典，包含了Hi-"
+"net网站上所有可用的台网的信息。"
