--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.utils.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.utils.po
@@ -3,30 +3,29 @@
 # This file is distributed under the same license as the HinetPy package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-07 14:21+0800\n"
+"POT-Creation-Date: 2018-11-21 16:01-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../api/HinetPy.utils.rst:2
 msgid "HinetPy.utils module"
 msgstr "HinetPy.utils 模块"
 
 #: HinetPy.utils:1 of
-msgid "Utility functions."
-msgstr "工具函数。"
+msgid "Utility functions used by HinetPy."
+msgstr "HinetPy用到的工具函数。"
 
 #: HinetPy.utils.split_integer:1 of
-msgid "Split an integer into evenly sized chunks"
+msgid "Split an integer into evenly sized chunks."
 msgstr "将一个整数分割成尽量等大小的多块"
 
 #: HinetPy.utils.point_inside_box:1 of
@@ -48,6 +47,6 @@ msgid "Check if a point inside a circular region."
 msgstr "检查点是否在环形区域内。"
 
 #: HinetPy.utils.string2datetime:1 of
-msgid "Convert String to datetime."
+msgid "Convert string to datetime."
 msgstr "将字符串转换为 datetime."
 
