--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.win32.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.win32.po
@@ -3,19 +3,18 @@
 # This file is distributed under the same license as the HinetPy package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-22 12:20+0800\n"
+"POT-Creation-Date: 2018-11-21 16:01-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../api/HinetPy.win32.rst:2
 msgid "HinetPy.win32 module"
@@ -28,7 +27,7 @@ msgstr "通道类。"
 #: HinetPy.win32.Channel HinetPy.win32.extract_pz HinetPy.win32.extract_sac
 #: HinetPy.win32.merge of
 msgid "Parameters"
-msgstr ""
+msgstr "参数"
 
 #: HinetPy.win32.Channel:3 of
 msgid "Channel ID."
@@ -98,18 +97,17 @@ msgstr "输出目录。默认输出到当前目录。"
 msgid ""
 "Maximum number of data points. Defaults to 8640000. If the input data is "
 "longer than one day, you have to to increase ``pmax``."
-msgstr "允许的最大数据点数。默认值为 8640000。若输出数据长度超过一天，你可以"
-"自行增加 ``pmax`` 的值。"
+msgstr "允许的最大数据点数。默认值为 8640000。若输出数据长度超过一天，你可以自行增加 ``pmax`` 的值。"
 
-#: HinetPy.win32.extract_pz:16 HinetPy.win32.extract_sac:14 of
+#: HinetPy.win32.extract_pz:20 HinetPy.win32.extract_sac:14 of
 msgid "Filter channels by ID."
 msgstr "按ID筛选通道。"
 
-#: HinetPy.win32.extract_pz:18 HinetPy.win32.extract_sac:16 of
+#: HinetPy.win32.extract_pz:22 HinetPy.win32.extract_sac:16 of
 msgid "Filter channels by name."
 msgstr "按照台站名筛选通道。"
 
-#: HinetPy.win32.extract_pz:20 HinetPy.win32.extract_sac:18 of
+#: HinetPy.win32.extract_pz:24 HinetPy.win32.extract_sac:18 of
 msgid "Filter channels by component."
 msgstr "按照分量筛选通道。"
 
@@ -123,16 +121,25 @@ msgid ""
 "processes by default."
 msgstr "数据提取过程中所使用的并行进程数目。默认使用所有进程。"
 
-#: HinetPy.win32.extract_pz:23 HinetPy.win32.extract_sac:27
+#: HinetPy.win32.extract_sac:29 of
+msgid ""
+"``win2sac`` removes sensitivity from waveform, then multiply by 1.0e9. "
+"Thus the extracted SAC files are velocity in nm/s, or acceleration in "
+"nm/s/s."
+msgstr ""
+"``win2sac`` 从波形中去除了灵敏度，并将数据乘以1.0e9。"
+"因而提取出的SAC文件的以 nm/s 为单位的速度或以 nm/s/s 为单位的加速度。"
+
+#: HinetPy.win32.extract_pz:27 HinetPy.win32.extract_sac:32
 #: HinetPy.win32.merge:10 of
 msgid "Examples"
 msgstr "示例"
 
-#: HinetPy.win32.extract_sac:31 of
+#: HinetPy.win32.extract_sac:36 of
 msgid "Extract all channel with specified SAC suffix and output directory:"
 msgstr "提取所有通道的数据，并指定SAC文件后缀和输出目录："
 
-#: HinetPy.win32.extract_pz:31 HinetPy.win32.extract_sac:36 of
+#: HinetPy.win32.extract_pz:35 HinetPy.win32.extract_sac:41 of
 msgid "Extract only specified channels:"
 msgstr "只提取指定通道："
 
@@ -141,8 +148,8 @@ msgid "Extract instrumental response in SAC PZ format from channel table."
 msgstr "从通道表中提取仪器响应信息并保存为SAC零极点文件。"
 
 #: HinetPy.win32.extract_pz:5 of
-msgid "Only works for Hi-net network."
-msgstr "仅对Hi-net有效。"
+msgid "Only works for instrumental responses of Hi-net network."
+msgstr "仅对Hi-net台网的仪器响应有效。"
 
 #: HinetPy.win32.extract_pz:7 of
 msgid ""
@@ -156,7 +163,16 @@ msgstr ""
 msgid "Suffix of SAC PZ files. Defaults to ``SAC_PZ``."
 msgstr "SAC零极点文件后缀，默认为 ``SAC_PZ`` 。"
 
-#: HinetPy.win32.extract_pz:27 of
+#: HinetPy.win32.extract_pz:16 of
+msgid ""
+"win2sac automatically removes sensivity from waveform data during win32 "
+"format to SAC format conversion. So the generated polezero file should "
+"omit the sensitivity."
+msgstr ""
+"win2sac在将win32格式转换为SAC格式时，自动从波形数据中去除了灵敏度。"
+"因而生成的零极点文件中省去了灵敏度。"
+
+#: HinetPy.win32.extract_pz:31 of
 msgid "Extract all channel with specified suffix and output directory:"
 msgstr "提取所有通道并指定SAC零极点文件后缀和输出目录："
 
@@ -180,9 +196,7 @@ msgstr "强制将所有win32文件按照日期排序。"
 msgid ""
 "If win32 files are named by starttime (e.g. ``201304040203.cnt``), "
 "sorting win32 files in list by name/time is prefered:"
-msgstr ""
-"若win32数据文件是按照数据开始时间命名的（如 ``201304040203.cnt`` ），"
-"则建议将win32文件按照文件名排序："
+msgstr "若win32数据文件是按照数据开始时间命名的（如 ``201304040203.cnt`` ），则建议将win32文件按照文件名排序："
 
 #: HinetPy.win32.merge:18 of
 msgid ""
@@ -190,8 +204,8 @@ msgid ""
 "``True`` to force ``catwin32`` to sort all data by time. However, it's "
 "time consuming. Do NOT use it unless necessary:"
 msgstr ""
-"若win32文件随机命名，你需要设置 ``force_sort=True`` 以强制 ``catwin32`` 将"
-"所有输入数据按照日期排序。然而，这一过程很耗时。除非必要，请勿使用这一选项："
+"若win32文件随机命名，你需要设置 ``force_sort=True`` 以强制 ``catwin32`` "
+"将所有输入数据按照日期排序。然而，这一过程很耗时。除非必要，请勿使用这一选项："
 
 #: HinetPy.win32.merge:25 of
 msgid "You can also use wildcard to specify the win32 files to be merged."
