--- a/docs/locale/zh_CN/LC_MESSAGES/tutorial/conversion.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/tutorial/conversion.po
@@ -3,12 +3,11 @@
 # This file is distributed under the same license as the HinetPy package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-03 23:46-0400\n"
+"POT-Creation-Date: 2018-11-21 16:01-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,10 +21,9 @@ msgid "Data conversion"
 msgstr "数据转换"
 
 #: ../../tutorial/conversion.rst:4
-#, fuzzy
 msgid ""
-"Hi-net provide waveform data in win32 format and instrument response in "
-"channel table. :mod:`~HinetPy.win32` can convert them into SAC and SAC "
+"Hi-net provide waveform data in win32 format and instrument responses in "
+"a channel table. :mod:`~HinetPy.win32` can convert them into SAC and SAC "
 "polezero formats."
 msgstr ""
 "Hi-net提供了win32格式的波形数据和通道表形式的仪器响应。 :mod:`~HinetPy.win32` "
@@ -39,16 +37,28 @@ msgstr "提取波形数据"
 msgid "Extract waveform data of all channels as SAC format."
 msgstr "提取所有通道的数据数据并保存为SAC格式。"
 
-#: ../../tutorial/conversion.rst:18
+#: ../../tutorial/conversion.rst:20
+msgid "The SAC files converted from win32 format are **NOT** in digital counts!!!"
+msgstr "从win32格式转换得到的SAC文件的单位不是digital counts！！！"
+
+#: ../../tutorial/conversion.rst:22
 msgid ""
-"The SAC files has a default filename ``STATION.COMPONENT.SAC`` (e.g. "
+"``win2sac_32`` automatically removes sensitivity from waveforms and "
+"multipy by 1.0e9. Thus, the SAC files are velocity in nm/s or "
+"accelaration in nm/s/s."
+msgstr ""
+"``win2sac_32`` 会自动从波形中去除灵敏度，并乘以1.0e9。因而，SAC文件是以 nm/s 为单位的速度或以 nm/s/s 为单位的加速度。"
+
+#: ../../tutorial/conversion.rst:26
+msgid ""
+"The SAC files have a default filename ``STATION.COMPONENT.SAC`` (e.g. "
 "``N.NABC.U.SAC``). You can specify another SAC suffix and a different "
 "output directory."
 msgstr ""
 "SAC文件的默认文件名格式为 ``STATION.COMPONENT.SAC`` （例如 ``N.NABC.U.SAC`` "
 "）。你可以指定其他SAC文件后缀和输出目录。"
 
-#: ../../tutorial/conversion.rst:23 ../../tutorial/conversion.rst:55
+#: ../../tutorial/conversion.rst:31 ../../tutorial/conversion.rst:65
 msgid ""
 "If you want to extract only a small subset of channels, you can use "
 "``filter_by_id``, ``filter_by_name`` and/or ``filter_by_component`` to "
@@ -58,32 +68,35 @@ msgstr ""
 "如果你只想提取一部分通道的波形数据，你可以使用 ``filter_by_id`` 、 ``filter_by_name`` 和/或 "
 "``filter_by_component`` 以筛选需要的通道。这些参数都可以接受字符串列表或者包含通配符的字符串。"
 
-#: ../../tutorial/conversion.rst:35
+#: ../../tutorial/conversion.rst:43
 msgid "Extract PZ"
 msgstr "提取零极点文件"
 
-#: ../../tutorial/conversion.rst:39
-msgid "This feature works for Hi-net only."
-msgstr "此功能仅对Hi-net有效。"
-
-#: ../../tutorial/conversion.rst:41
-msgid "F-net data users can get RESP files from `NIED F-net`_."
-msgstr "F-net数据用户可以从 `NIED F-net`_ 获取RESP仪器响应文件。"
-
-#: ../../tutorial/conversion.rst:43
+#: ../../tutorial/conversion.rst:45
 msgid ""
-":meth:`~HinetPy.win32.extract_pz` can convert Hi-net channel table to SAC"
-" PZ format. Its usage is very similar to "
-":meth:`~HinetPy.win32.extract_sac`."
+":meth:`~HinetPy.win32.extract_pz` can convert instrumental responses from"
+" Hi-net's channel table to SAC PZ format."
 msgstr ""
-":meth:`~HinetPy.win32.extract_pz` 可以将Hi-net通道表仪器响应转换为SAC零极点格式。其用法类似域 "
-":meth:`~HinetPy.win32.extract_sac` 。"
+":meth:`~HinetPy.win32.extract_pz` 可以将仪器响应从Hi-net的通道表格式转换为SAC PZ格式。"
 
-#: ../../tutorial/conversion.rst:46
+#: ../../tutorial/conversion.rst:50
+msgid "This function works for Hi-net network only."
+msgstr "此功能仅对Hi-net台网有效。"
+
+#: ../../tutorial/conversion.rst:52
+msgid ""
+"F-net data users are highly recommended to use `FnetPy "
+"<https://github.com/seisman/FnetPy>`_ to request waveform data in SEED "
+"format and extract instrumental responses in RESP or PZ format from SEED "
+"files."
+msgstr "强烈建议F-net数据用户使用 `FnetPy <http://github.com/seisman/FnetPy>`_ "
+"从Fnet网站申请SEED格式的数据，并从SEED文件中提取RESP或PZ格式的仪器响应。"
+
+#: ../../tutorial/conversion.rst:56
 msgid "Extract information of all channels as SACPZ file:"
 msgstr "提取所有通道的仪器响应并保存为SACPZ文件："
 
-#: ../../tutorial/conversion.rst:50
+#: ../../tutorial/conversion.rst:60
 msgid ""
 "The SACPZ file has a default name ``STATION.COMPONENT.SAC_PZ`` (e.g. "
 "``N.NABC.U.SAC_PZ``). You can specify another SACPZ suffix and a "
@@ -92,13 +105,12 @@ msgstr ""
 "SACPZ文件的默认文件名格式为 ``STATION.COMPONENT.SAC_PZ`` （例如 ``N.NABC.U.SAC_PZ`` "
 "）。你可以指定其他SACPZ文件后缀和输出目录。"
 
-#: ../../tutorial/conversion.rst:68
+#: ../../tutorial/conversion.rst:78
 msgid ""
 "`Response of Observation Equipment "
 "<https://hinetwww11.bosai.go.jp/auth/seed/?LANG=en>`_"
 msgstr ""
 
-#: ../../tutorial/conversion.rst:69
+#: ../../tutorial/conversion.rst:79
 msgid "`Hi-net FAQ Q08 <http://www.hinet.bosai.go.jp/faq/?LANG=en#Q08>`_"
 msgstr ""
-
