--- a/docs/locale/zh_CN/LC_MESSAGES/examples/example2.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/examples/example2.po
@@ -8,16 +8,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.5.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-22 12:20+0800\n"
+"POT-Creation-Date: 2019-02-19 17:30-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../examples/example2.rst:2
-msgid "Request waveform data from obspy Catalog"
-msgstr "根据obspy Catalog申请波形数据"
+msgid "Request continous waveform data from obspy Catalog"
+msgstr "根据obspy Catalog申请连续波形数据"
 
