--- a/docs/locale/zh_CN/LC_MESSAGES/examples/example1.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/examples/example1.po
@@ -3,23 +3,22 @@
 # This file is distributed under the same license as the HinetPy package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.5.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-22 12:20+0800\n"
+"POT-Creation-Date: 2019-02-19 17:30-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.6.0\n"
 
 #: ../../examples/example1.rst:2
-msgid "Request waveform data from CSV catalog"
-msgstr "根据CSV地震目录申请波形数据"
+msgid "Request continuous waveform data from CSV catalog"
+msgstr "根据CSV地震目录申请连续波形数据"
 
 #: ../../examples/example1.rst:4
 msgid ""
@@ -32,7 +31,8 @@ msgid ""
 "Below is an example catalog file in CSV format. The catalog is obtained "
 "from `IRIS web service <http://service.iris.edu/fdsnws/event/1/>`_."
 msgstr ""
-"下面的CSV格式的示例地震目录来自于 `IRIS web service <http://service.iris.edu/fdsnws/event/1/>`_ 。"
+"下面的CSV格式的示例地震目录来自于 `IRIS web service "
+"<http://service.iris.edu/fdsnws/event/1/>`_ 。"
 
 #: ../../examples/example1.rst:12
 msgid "Python script:"
