--- a/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/api/HinetPy.client.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HinetPy 0.6.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-28 14:38-0500\n"
+"POT-Creation-Date: 2019-06-13 11:56-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -272,8 +272,8 @@ msgid ""
 ":meth:`~HinetPy.client.Client.get_waveform` has been renamed to "
 ":meth:`~HinetPy.client.Client.get_continuous_waveform`."
 msgstr ""
-":meth:`~HinetPy.client.Client.get_waveform` "
-"已改名为 :meth:`~HinetPy.client.Client.get_continuous_waveform`."
+":meth:`~HinetPy.client.Client.get_waveform` 已改名为 "
+":meth:`~HinetPy.client.Client.get_continuous_waveform`."
 
 #: HinetPy.client.Client.get_event_waveform:1 of
 msgid "Get event waveform data."
